# alt-port

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: portfolio-analysis.yml
config/: portfolio.json
docs/: index.html  portfolio_analysis.json  portfolio_summary.json
docs/symbols/: 1000cat.json  ada.json  bonk.json  brett.json  btc.json  comp.json  cookie.json  cos.json  crv.json  doge.json  eth.json  floki.json  giga.json  hbar.json  home.json  iotx.json  k.json  kda.json  magic.json  mav.json  mog.json  mubi.json  om.json  pengu.json  pepe.json  popcat.json  portal.json  ray.json  render.json  rez.json  rio.json  sahara.json  sei.json  sol.json  spk.json  sto.json  super.json  swarms.json  syrup.json  useless.json  (+5 more)
src/: __init__.py  main.py
src/core/: __init__.py  ai_engine.py  config.py  data_fetcher.py  technical_analyzer.py
tests/: __init__.py  test_config.py  test_data_fetcher.py
